[package]
name = "AtCoderSolutions"
version = "0.1.0"
authors = ["Hiroshi Kori <hiroshi.maybe@gmail.com>"]
edition = "2018"

[dependencies]
# https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja/Cargo.toml
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"

# `num-traits`の自動実装
#num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
#ndarray = "=0.13.0"

# 線形代数
#nalgebra = "=0.20.0"

# (線形)代数の抽象化
#alga = "=0.9.3"

# libmのRust実装
#libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"

# 乱数の分布の追加
#rand_distr = "=0.2.2"

# グラフ
#petgraph = "=0.5.0"

# 挿入順を保持するhash table
#indexmap = "=1.3.2"

# 正規表現
#regex = "=1.3.6"

# staticアイテムの遅延初期化
#lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
#ordered-float = "=1.0.2"

# ASCII文字列
#ascii = "=1.0.0"

# permutation
#permutohedron = "=0.2.4"

# スライスの拡張
#superslice = "=1.0.0"

# イテレータの拡張
#itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
#itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
#maplit = "=1.0.2"

# 即席enum `Either<L, R>`
#either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
#im-rc = "=14.3.0"

# 可変長bit set
#fixedbitset = "=0.2.0"

# 可変長bit set
#bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
#proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
#text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
#whiteread = "=0.5.0"

# 高速なハッシュ関数
#rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
#smallvec = "=1.2.0"

[[bin]]
name = "weather_forecast"
path = "weather_forecast.rs"

[[bin]]
name = "qwerty"
path = "qwerty.rs"

[[bin]]
name = "atcoder_quiz_2"
path = "atcoder_quiz_2.rs"

[[bin]]
name = "maritozzo"
path = "maritozzo.rs"

[[bin]]
name = "neolexicographic_ordering"
path = "neolexicographic_ordering.rs"

[[bin]]
name = "strange_lunchbox"
path = "strange_lunchbox.rs"

[[bin]]
name = "moat"
path = "moat.rs"

[[bin]]
name = "make_10"
path = "make_10.rs"

[[bin]]
name = "dist_max_2"
path = "dist_max_2.rs"

[[bin]]
name = "leading_1s"
path = "leading_1s.rs"

[[bin]]
name = "ternary_strings"
path = "ternary_strings.rs"

[[bin]]
name = "find_multiple"
path = "find_multiple.rs"

[[bin]]
name = "base_k"
path = "base_k.rs"

[[bin]]
name = "long_sequence"
path = "long_sequence.rs"

[[bin]]
name = "fg_operation"
path = "fg_operation.rs"

[[bin]]
name = "ubiquity2"
path = "ubiquity2.rs"

[[bin]]
name = "ubiquity_rs"
path = "ubiquity_rs.rs"

[[bin]]
name = "seismic_magnitude_scales"
path = "seismic_magnitude_scales.rs"

[[bin]]
name = "typo"
path = "typo.rs"

[[bin]]
name = "select_mul"
path = "select_mul.rs"

[[bin]]
name = "online_games"
path = "online_games.rs"

[[bin]]
name = "leq"
path = "leq.rs"

[[bin]]
name = "four_digits"
path = "four_digits.rs"

[[bin]]
name = "failing_grade"
path = "failing_grade.rs"

[[bin]]
name = "swisssystem_tournament"
path = "swisssystem_tournament.rs"

[[bin]]
name = "between_two_arrays"
path = "between_two_arrays.rs"

[[bin]]
name = "red_and_blue_tree"
path = "red_and_blue_tree.rs"

[[bin]]
name = "gold_and_silver"
path = "gold_and_silver.rs"

[[bin]]
name = "balls_of_three_colors"
path = "balls_of_three_colors.rs"

[[bin]]
name = "exact_price"
path = "exact_price.rs"

[[bin]]
name = "string_shifting"
path = "string_shifting.rs"

[[bin]]
name = "doukasen"
path = "doukasen.rs"

[[bin]]
name = "restricted_permutation"
path = "restricted_permutation.rs"

[[bin]]
name = "cutting_woods"
path = "cutting_woods.rs"

[[bin]]
name = "big_array"
path = "big_array.rs"

[[bin]]
name = "cfilter"
path = "cfilter.rs"

[[bin]]
name = "123_subtraction"
path = "123_subtraction.rs"

[[bin]]
name = "tribonacci_sequence"
path = "tribonacci_sequence.rs"

[[bin]]
name = "amidakuji"
path = "amidakuji.rs"

[[bin]]
name = "biscuits"
path = "biscuits.rs"

[[bin]]
name = "double_factorial"
path = "double_factorial.rs"

[[bin]]
name = "distinct_strings"
path = "distinct_strings.rs"

[[bin]]
name = "star_or_not"
path = "star_or_not.rs"

[[bin]]
name = "calendar_validator"
path = "calendar_validator.rs"

[[bin]]
name = "play_train"
path = "play_train.rs"

[[bin]]
name = "fu"
path = "fu.rs"

[[bin]]
name = "abc_identity"
path = "abc_identity.rs"

[[bin]]
name = "takahashis_salary"
path = "takahashis_salary.rs"

[[bin]]
name = "atcoder_programming_training"
path = "atcoder_programming_training.rs"

[[bin]]
name = "zigzag"
path = "zigzag.rs"

[[bin]]
name = "airport_bus"
path = "airport_bus.rs"

[[bin]]
name = "two_hop_friends"
path = "two_hop_friends.rs"

[[bin]]
name = "takahashi_in_wonder_land"
path = "takahashi_in_wonder_land.rs"

[[bin]]
name = "niconico_string"
path = "niconico_string.rs"

[[bin]]
name = "flipping_signs"
path = "flipping_signs.rs"

[[bin]]
name = "how_to_sell_awesome_takoyakis"
path = "how_to_sell_awesome_takoyakis.rs"

[[bin]]
name = "hayhos_last_exam"
path = "hayhos_last_exam.rs"

[[bin]]
name = "dubious_document_2"
path = "dubious_document_2.rs"

[[bin]]
name = "transform_scores"
path = "transform_scores.rs"

[[bin]]
name = "island_and_bridge"
path = "island_and_bridge.rs"

[[bin]]
name = "between_a_and_b"
path = "between_a_and_b.rs"

[[bin]]
name = "last_card"
path = "last_card.rs"

[[bin]]
name = "keyence_building"
path = "keyence_building.rs"

[[bin]]
name = "abc_conjecture"
path = "abc_conjecture.rs"

[[bin]]
name = "project_planning"
path = "project_planning.rs"

[[bin]]
name = "message_board"
path = "message_board.rs"

[[bin]]
name = "send_more_money"
path = "send_more_money.rs"

[[bin]]
name = "takahashi_and_image_processing"
path = "takahashi_and_image_processing.rs"

[[bin]]
name = "pile_up_boxes"
path = "pile_up_boxes.rs"

[[bin]]
name = "squares_2"
path = "squares_2.rs"

[[bin]]
name = "ameba"
path = "ameba.rs"

[[bin]]
name = "handstand_2"
path = "handstand_2.rs"

[[bin]]
name = "two_arrays"
path = "two_arrays.rs"

[[bin]]
name = "coprime"
path = "coprime.rs"

[[bin]]
name = "on_and_off"
path = "on_and_off.rs"

[[bin]]
name = "takahashis_secret"
path = "takahashis_secret.rs"

[[bin]]
name = "final_day"
path = "final_day.rs"

[[bin]]
name = "linear_probing"
path = "linear_probing.rs"

[[bin]]
name = "remove_one_character"
path = "remove_one_character.rs"

[[bin]]
name = "colorful_lines"
path = "colorful_lines.rs"

[[bin]]
name = "digit_sum_minimization"
path = "digit_sum_minimization.rs"

[[bin]]
name = "flip"
path = "flip.rs"

[[bin]]
name = "robot_arms"
path = "robot_arms.rs"

[[bin]]
name = "monotonicincreasing"
path = "monotonicincreasing.rs"

[[bin]]
name = "distance_sums_2"
path = "distance_sums_2.rs"

[[bin]]
name = "just_one"
path = "just_one.rs"

[[bin]]
name = "atcoder_quiz_3"
path = "atcoder_quiz_3.rs"

[[bin]]
name = "triple_metre"
path = "triple_metre.rs"

[[bin]]
name = "x_drawing"
path = "x_drawing.rs"

[[bin]]
name = "destroyer_takahashi"
path = "destroyer_takahashi.rs"

[[bin]]
name = "fraction_floor_sum"
path = "fraction_floor_sum.rs"

[[bin]]
name = "three_cells_per_row_and_column"
path = "three_cells_per_row_and_column.rs"

[[bin]]
name = "two_lucky_numbers"
path = "two_lucky_numbers.rs"

[[bin]]
name = "grid_repainting_4"
path = "grid_repainting_4.rs"

[[bin]]
name = "zero_xor"
path = "zero_xor.rs"

[[bin]]
name = "piller_piller_piller_piller_piller"
path = "piller_piller_piller_piller_piller.rs"

[[bin]]
name = "pascal_triangle"
path = "pascal_triangle.rs"

[[bin]]
name = "digits_in_multiplication"
path = "digits_in_multiplication.rs"

[[bin]]
name = "special_trains"
path = "special_trains.rs"

[[bin]]
name = "reversible_cards"
path = "reversible_cards.rs"

[[bin]]
name = "find_takahashis_bug"
path = "find_takahashis_bug.rs"

[[bin]]
name = "total_summation"
path = "total_summation.rs"

[[bin]]
name = "lewis_carroll"
path = "lewis_carroll.rs"

[[bin]]
name = "random_generator"
path = "random_generator.rs"

[[bin]]
name = "snuke_prime"
path = "snuke_prime.rs"

[[bin]]
name = "candles"
path = "candles.rs"

[[bin]]
name = "contest_in_atcoder_kingdom"
path = "contest_in_atcoder_kingdom.rs"

[[bin]]
name = "shrinking"
path = "shrinking.rs"

