[package]
name = "AtCoderSolutions"
version = "0.1.0"
authors = ["Hiroshi Kori <hiroshi.maybe@gmail.com>"]
edition = "2018"

[dependencies]
# https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja/Cargo.toml
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"

# `num-traits`の自動実装
#num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
#ndarray = "=0.13.0"

# 線形代数
#nalgebra = "=0.20.0"

# (線形)代数の抽象化
#alga = "=0.9.3"

# libmのRust実装
#libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"

# 乱数の分布の追加
#rand_distr = "=0.2.2"

# グラフ
#petgraph = "=0.5.0"

# 挿入順を保持するhash table
#indexmap = "=1.3.2"

# 正規表現
#regex = "=1.3.6"

# staticアイテムの遅延初期化
#lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
#ordered-float = "=1.0.2"

# ASCII文字列
#ascii = "=1.0.0"

# permutation
#permutohedron = "=0.2.4"

# スライスの拡張
#superslice = "=1.0.0"

# イテレータの拡張
#itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
#itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
#maplit = "=1.0.2"

# 即席enum `Either<L, R>`
#either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
#im-rc = "=14.3.0"

# 可変長bit set
#fixedbitset = "=0.2.0"

# 可変長bit set
#bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
#proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
#text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
#whiteread = "=0.5.0"

# 高速なハッシュ関数
#rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
#smallvec = "=1.2.0"

[[bin]]
name = "weather_forecast"
path = "weather_forecast.rs"

[[bin]]
name = "qwerty"
path = "qwerty.rs"

[[bin]]
name = "atcoder_quiz_2"
path = "atcoder_quiz_2.rs"

[[bin]]
name = "maritozzo"
path = "maritozzo.rs"

[[bin]]
name = "neolexicographic_ordering"
path = "neolexicographic_ordering.rs"

[[bin]]
name = "strange_lunchbox"
path = "strange_lunchbox.rs"

[[bin]]
name = "moat"
path = "moat.rs"

[[bin]]
name = "make_10"
path = "make_10.rs"

[[bin]]
name = "dist_max_2"
path = "dist_max_2.rs"

[[bin]]
name = "leading_1s"
path = "leading_1s.rs"

[[bin]]
name = "ternary_strings"
path = "ternary_strings.rs"

[[bin]]
name = "find_multiple"
path = "find_multiple.rs"

[[bin]]
name = "base_k"
path = "base_k.rs"

[[bin]]
name = "long_sequence"
path = "long_sequence.rs"

[[bin]]
name = "fg_operation"
path = "fg_operation.rs"

[[bin]]
name = "ubiquity2"
path = "ubiquity2.rs"

[[bin]]
name = "ubiquity_rs"
path = "ubiquity_rs.rs"

[[bin]]
name = "seismic_magnitude_scales"
path = "seismic_magnitude_scales.rs"

[[bin]]
name = "typo"
path = "typo.rs"

[[bin]]
name = "select_mul"
path = "select_mul.rs"

[[bin]]
name = "online_games"
path = "online_games.rs"

[[bin]]
name = "leq"
path = "leq.rs"

[[bin]]
name = "four_digits"
path = "four_digits.rs"

[[bin]]
name = "failing_grade"
path = "failing_grade.rs"

[[bin]]
name = "swisssystem_tournament"
path = "swisssystem_tournament.rs"

[[bin]]
name = "between_two_arrays"
path = "between_two_arrays.rs"

[[bin]]
name = "red_and_blue_tree"
path = "red_and_blue_tree.rs"

[[bin]]
name = "gold_and_silver"
path = "gold_and_silver.rs"

[[bin]]
name = "balls_of_three_colors"
path = "balls_of_three_colors.rs"

[[bin]]
name = "exact_price"
path = "exact_price.rs"

[[bin]]
name = "string_shifting"
path = "string_shifting.rs"

[[bin]]
name = "doukasen"
path = "doukasen.rs"

[[bin]]
name = "restricted_permutation"
path = "restricted_permutation.rs"

[[bin]]
name = "cutting_woods"
path = "cutting_woods.rs"

[[bin]]
name = "big_array"
path = "big_array.rs"

[[bin]]
name = "cfilter"
path = "cfilter.rs"

[[bin]]
name = "123_subtraction"
path = "123_subtraction.rs"

[[bin]]
name = "tribonacci_sequence"
path = "tribonacci_sequence.rs"

[[bin]]
name = "amidakuji"
path = "amidakuji.rs"

[[bin]]
name = "biscuits"
path = "biscuits.rs"

[[bin]]
name = "double_factorial"
path = "double_factorial.rs"

[[bin]]
name = "distinct_strings"
path = "distinct_strings.rs"

[[bin]]
name = "star_or_not"
path = "star_or_not.rs"

[[bin]]
name = "calendar_validator"
path = "calendar_validator.rs"

[[bin]]
name = "play_train"
path = "play_train.rs"

[[bin]]
name = "fu"
path = "fu.rs"

[[bin]]
name = "abc_identity"
path = "abc_identity.rs"

[[bin]]
name = "takahashis_salary"
path = "takahashis_salary.rs"

[[bin]]
name = "atcoder_programming_training"
path = "atcoder_programming_training.rs"

[[bin]]
name = "zigzag"
path = "zigzag.rs"

[[bin]]
name = "airport_bus"
path = "airport_bus.rs"

[[bin]]
name = "two_hop_friends"
path = "two_hop_friends.rs"

[[bin]]
name = "takahashi_in_wonder_land"
path = "takahashi_in_wonder_land.rs"

[[bin]]
name = "niconico_string"
path = "niconico_string.rs"

[[bin]]
name = "flipping_signs"
path = "flipping_signs.rs"

[[bin]]
name = "how_to_sell_awesome_takoyakis"
path = "how_to_sell_awesome_takoyakis.rs"

[[bin]]
name = "hayhos_last_exam"
path = "hayhos_last_exam.rs"

[[bin]]
name = "dubious_document_2"
path = "dubious_document_2.rs"

[[bin]]
name = "transform_scores"
path = "transform_scores.rs"

[[bin]]
name = "island_and_bridge"
path = "island_and_bridge.rs"

[[bin]]
name = "between_a_and_b"
path = "between_a_and_b.rs"

[[bin]]
name = "last_card"
path = "last_card.rs"

[[bin]]
name = "keyence_building"
path = "keyence_building.rs"

[[bin]]
name = "abc_conjecture"
path = "abc_conjecture.rs"

[[bin]]
name = "project_planning"
path = "project_planning.rs"

[[bin]]
name = "message_board"
path = "message_board.rs"

[[bin]]
name = "send_more_money"
path = "send_more_money.rs"

[[bin]]
name = "takahashi_and_image_processing"
path = "takahashi_and_image_processing.rs"

[[bin]]
name = "pile_up_boxes"
path = "pile_up_boxes.rs"

[[bin]]
name = "squares_2"
path = "squares_2.rs"

[[bin]]
name = "ameba"
path = "ameba.rs"

[[bin]]
name = "handstand_2"
path = "handstand_2.rs"

[[bin]]
name = "two_arrays"
path = "two_arrays.rs"

[[bin]]
name = "coprime"
path = "coprime.rs"

[[bin]]
name = "on_and_off"
path = "on_and_off.rs"

[[bin]]
name = "takahashis_secret"
path = "takahashis_secret.rs"

[[bin]]
name = "final_day"
path = "final_day.rs"

[[bin]]
name = "linear_probing"
path = "linear_probing.rs"

[[bin]]
name = "remove_one_character"
path = "remove_one_character.rs"

[[bin]]
name = "colorful_lines"
path = "colorful_lines.rs"

[[bin]]
name = "digit_sum_minimization"
path = "digit_sum_minimization.rs"

[[bin]]
name = "flip"
path = "flip.rs"

[[bin]]
name = "robot_arms"
path = "robot_arms.rs"

[[bin]]
name = "monotonicincreasing"
path = "monotonicincreasing.rs"

[[bin]]
name = "distance_sums_2"
path = "distance_sums_2.rs"

[[bin]]
name = "just_one"
path = "just_one.rs"

[[bin]]
name = "atcoder_quiz_3"
path = "atcoder_quiz_3.rs"

[[bin]]
name = "triple_metre"
path = "triple_metre.rs"

[[bin]]
name = "x_drawing"
path = "x_drawing.rs"

[[bin]]
name = "destroyer_takahashi"
path = "destroyer_takahashi.rs"

[[bin]]
name = "fraction_floor_sum"
path = "fraction_floor_sum.rs"

[[bin]]
name = "three_cells_per_row_and_column"
path = "three_cells_per_row_and_column.rs"

[[bin]]
name = "two_lucky_numbers"
path = "two_lucky_numbers.rs"

[[bin]]
name = "grid_repainting_4"
path = "grid_repainting_4.rs"

[[bin]]
name = "zero_xor"
path = "zero_xor.rs"

[[bin]]
name = "piller_piller_piller_piller_piller"
path = "piller_piller_piller_piller_piller.rs"

[[bin]]
name = "pascal_triangle"
path = "pascal_triangle.rs"

[[bin]]
name = "digits_in_multiplication"
path = "digits_in_multiplication.rs"

[[bin]]
name = "special_trains"
path = "special_trains.rs"

[[bin]]
name = "reversible_cards"
path = "reversible_cards.rs"

[[bin]]
name = "find_takahashis_bug"
path = "find_takahashis_bug.rs"

[[bin]]
name = "total_summation"
path = "total_summation.rs"

[[bin]]
name = "lewis_carroll"
path = "lewis_carroll.rs"

[[bin]]
name = "random_generator"
path = "random_generator.rs"

[[bin]]
name = "snuke_prime"
path = "snuke_prime.rs"

[[bin]]
name = "candles"
path = "candles.rs"

[[bin]]
name = "contest_in_atcoder_kingdom"
path = "contest_in_atcoder_kingdom.rs"

[[bin]]
name = "shrinking"
path = "shrinking.rs"

[[bin]]
name = "lining_up"
path = "lining_up.rs"

[[bin]]
name = "gt_lt_again"
path = "gt_lt_again.rs"

[[bin]]
name = "coordinate_compression"
path = "coordinate_compression.rs"

[[bin]]
name = "sum_of_maximum_weights"
path = "sum_of_maximum_weights.rs"

[[bin]]
name = "robot_arm"
path = "robot_arm.rs"

[[bin]]
name = "maze_master"
path = "maze_master.rs"

[[bin]]
name = "aab_aba_baa"
path = "aab_aba_baa.rs"

[[bin]]
name = "factors_of_factorial"
path = "factors_of_factorial.rs"

[[bin]]
name = "qq_solver"
path = "qq_solver.rs"

[[bin]]
name = "caesar_cipher"
path = "caesar_cipher.rs"

[[bin]]
name = "graph_isomorphism"
path = "graph_isomorphism.rs"

[[bin]]
name = "weak_takahashi"
path = "weak_takahashi.rs"

[[bin]]
name = "rook_path"
path = "rook_path.rs"

[[bin]]
name = "exactly_n_points"
path = "exactly_n_points.rs"

[[bin]]
name = "honestorunkind2"
path = "honestorunkind2.rs"

[[bin]]
name = "arc_wrecker_2"
path = "arc_wrecker_2.rs"

[[bin]]
name = "palindrome_decomposition"
path = "palindrome_decomposition.rs"

[[bin]]
name = "sorting_queries"
path = "sorting_queries.rs"

[[bin]]
name = "through_path"
path = "through_path.rs"

[[bin]]
name = "permutation_grid"
path = "permutation_grid.rs"

[[bin]]
name = "shift_and_reverse"
path = "shift_and_reverse.rs"

[[bin]]
name = "yet_another_die_game"
path = "yet_another_die_game.rs"

[[bin]]
name = "scc_puzzle"
path = "scc_puzzle.rs"

[[bin]]
name = "redundant_redundancy"
path = "redundant_redundancy.rs"

[[bin]]
name = "sigma_k_0_10_100_floor_x_10k"
path = "sigma_k_0_10_100_floor_x_10k.rs"

[[bin]]
name = "p_cas_card_and_takahashi"
path = "p_cas_card_and_takahashi.rs"

[[bin]]
name = "special_subsets"
path = "special_subsets.rs"

[[bin]]
name = "pilot"
path = "pilot.rs"

[[bin]]
name = "destruction"
path = "destruction.rs"

[[bin]]
name = "crossfree_matching"
path = "crossfree_matching.rs"

[[bin]]
name = "clan_migration"
path = "clan_migration.rs"

[[bin]]
name = "8_puzzle_on_graph"
path = "8_puzzle_on_graph.rs"

[[bin]]
name = "striped_pattern"
path = "striped_pattern.rs"

[[bin]]
name = "knight"
path = "knight.rs"

[[bin]]
name = "shapes"
path = "shapes.rs"

[[bin]]
name = "k_cakes"
path = "k_cakes.rs"

[[bin]]
name = "bouquet"
path = "bouquet.rs"

[[bin]]
name = "graph_destruction"
path = "graph_destruction.rs"

[[bin]]
name = "crested_ibis_vs_monster"
path = "crested_ibis_vs_monster.rs"

[[bin]]
name = "non_monotonous_graph"
path = "non_monotonous_graph.rs"

[[bin]]
name = "bfs"
path = "bfs.rs"

[[bin]]
name = "weird_function"
path = "weird_function.rs"

[[bin]]
name = "longest_segment"
path = "longest_segment.rs"

[[bin]]
name = "happy_new_year"
path = "happy_new_year.rs"

[[bin]]
name = "prefix_kth_max"
path = "prefix_kth_max.rs"

[[bin]]
name = "arithmetic_number"
path = "arithmetic_number.rs"

[[bin]]
name = "reordering"
path = "reordering.rs"

[[bin]]
name = "euclidean_algorithm"
path = "euclidean_algorithm.rs"

[[bin]]
name = "pair_of_balls"
path = "pair_of_balls.rs"

[[bin]]
name = "bridge"
path = "bridge.rs"

[[bin]]
name = "journey"
path = "journey.rs"

[[bin]]
name = "rotate_2"
path = "rotate_2.rs"

[[bin]]
name = "climbing_takahashi"
path = "climbing_takahashi.rs"

[[bin]]
name = "the_kth_time_query"
path = "the_kth_time_query.rs"

[[bin]]
name = "multiply_and_rotate"
path = "multiply_and_rotate.rs"

[[bin]]
name = "mst__1"
path = "mst__1.rs"

[[bin]]
name = "royal_straight_flush"
path = "royal_straight_flush.rs"

[[bin]]
name = "amusement_park"
path = "amusement_park.rs"

[[bin]]
name = "erase_by_value"
path = "erase_by_value.rs"

[[bin]]
name = "dividing_subsequence"
path = "dividing_subsequence.rs"

[[bin]]
name = "row_column_sums"
path = "row_column_sums.rs"

[[bin]]
name = "chukodai"
path = "chukodai.rs"

[[bin]]
name = "who_is_missing"
path = "who_is_missing.rs"

[[bin]]
name = "route_map"
path = "route_map.rs"

[[bin]]
name = "dance"
path = "dance.rs"

[[bin]]
name = "bridge_and_sheets"
path = "bridge_and_sheets.rs"

[[bin]]
name = "reserve_or_reverse"
path = "reserve_or_reverse.rs"

[[bin]]
name = "the_majority"
path = "the_majority.rs"

[[bin]]
name = "not_overflow"
path = "not_overflow.rs"

[[bin]]
name = "matrix_transposition"
path = "matrix_transposition.rs"

[[bin]]
name = "kasaka"
path = "kasaka.rs"

[[bin]]
name = "lr_insertion"
path = "lr_insertion.rs"

[[bin]]
name = "skiing"
path = "skiing.rs"

[[bin]]
name = "low_resolution"
path = "low_resolution.rs"

[[bin]]
name = "mex_min"
path = "mex_min.rs"

[[bin]]
name = "many_formulas"
path = "many_formulas.rs"

[[bin]]
name = "exponential_or_quadratic"
path = "exponential_or_quadratic.rs"

[[bin]]
name = "pizza"
path = "pizza.rs"

[[bin]]
name = "digitnum"
path = "digitnum.rs"

[[bin]]
name = "and_and_sum"
path = "and_and_sum.rs"

[[bin]]
name = "range_sums"
path = "range_sums.rs"

[[bin]]
name = "align"
path = "align.rs"

[[bin]]
name = "a"
path = "a.rs"
[[bin]]
name = "loor_ceil_decomposition"
path = "loor_ceil_decomposition.rs"

[[bin]]
name = "sum_of_three_terms"
path = "sum_of_three_terms.rs"

[[bin]]
name = "horizon"
path = "horizon.rs"

[[bin]]
name = "integer_division"
path = "integer_division.rs"

[[bin]]
name = "knight_fork"
path = "knight_fork.rs"

[[bin]]
name = "prime_sum_game"
path = "prime_sum_game.rs"

[[bin]]
name = "subtree_kth_max"
path = "subtree_kth_max.rs"

[[bin]]
name = "edge_checker"
path = "edge_checker.rs"

[[bin]]
name = "count_distinct_integers"
path = "count_distinct_integers.rs"

[[bin]]
name = "jumping_takahashi"
path = "jumping_takahashi.rs"

[[bin]]
name = "strange_balls"
path = "strange_balls.rs"

[[bin]]
name = "ranges_on_tree"
path = "ranges_on_tree.rs"

[[bin]]
name = "digit_machine"
path = "digit_machine.rs"

[[bin]]
name = "pasta"
path = "pasta.rs"

[[bin]]
name = "connect_6"
path = "connect_6.rs"

[[bin]]
name = "sequence_query"
path = "sequence_query.rs"

[[bin]]
name = "putting_candies"
path = "putting_candies.rs"

[[bin]]
name = "skate"
path = "skate.rs"

[[bin]]
name = "a__bb"
path = "a__bb.rs"

[[bin]]
name = "a_bb"
path = "a_bb.rs"

[[bin]]
name = "triple_shift"
path = "triple_shift.rs"

[[bin]]
name = "tshirt"
path = "tshirt.rs"

[[bin]]
name = "minimize_ordering"
path = "minimize_ordering.rs"

[[bin]]
name = "1111gal_password"
path = "1111gal_password.rs"

[[bin]]
name = "abc_transform"
path = "abc_transform.rs"

[[bin]]
name = "a_x_a"
path = "a_x_a.rs"

[[bin]]
name = "shampoo"
path = "shampoo.rs"

[[bin]]
name = "hit_and_blow"
path = "hit_and_blow.rs"

[[bin]]
name = "collision_2"
path = "collision_2.rs"

[[bin]]
name = "moves_on_binary_tree"
path = "moves_on_binary_tree.rs"

[[bin]]
name = "edge_deletion"
path = "edge_deletion.rs"

[[bin]]
name = "coprime_pair"
path = "coprime_pair.rs"

[[bin]]
name = "count_1s"
path = "count_1s.rs"

[[bin]]
name = "last_letter"
path = "last_letter.rs"

[[bin]]
name = "go_straight_and_turn_right"
path = "go_straight_and_turn_right.rs"

[[bin]]
name = "yamanote_line_game"
path = "yamanote_line_game.rs"

[[bin]]
name = "swap_hats"
path = "swap_hats.rs"

[[bin]]
name = "king_bombee"
path = "king_bombee.rs"

[[bin]]
name = "four_points"
path = "four_points.rs"

[[bin]]
name = "get_closer"
path = "get_closer.rs"

[[bin]]
name = "coupon"
path = "coupon.rs"

[[bin]]
name = "2variable_function"
path = "2variable_function.rs"

[[bin]]
name = "bishop_2"
path = "bishop_2.rs"

[[bin]]
name = "larger_score"
path = "larger_score.rs"

[[bin]]
name = "01_generation"
path = "01_generation.rs"

[[bin]]
name = "lacked_number"
path = "lacked_number.rs"

[[bin]]
name = "slimes_2"
path = "slimes_2.rs"

[[bin]]
name = "dice_sum"
path = "dice_sum.rs"

[[bin]]
name = "range_count_query"
path = "range_count_query.rs"

[[bin]]
name = "kcolinear_line"
path = "kcolinear_line.rs"

[[bin]]
name = "periodic_number"
path = "periodic_number.rs"

[[bin]]
name = "increasing_prefix_xor"
path = "increasing_prefix_xor.rs"

[[bin]]
name = "last_two_digits"
path = "last_two_digits.rs"

[[bin]]
name = "practical_computing"
path = "practical_computing.rs"

[[bin]]
name = "k_swap"
path = "k_swap.rs"

[[bin]]
name = "together_square"
path = "together_square.rs"

[[bin]]
name = "small_d_and_k"
path = "small_d_and_k.rs"

[[bin]]
name = "rectangle_gcd"
path = "rectangle_gcd.rs"

[[bin]]
name = "you_should_output_arc_though_this_is_abc"
path = "you_should_output_arc_though_this_is_abc.rs"

[[bin]]
name = "light_it_up"
path = "light_it_up.rs"

[[bin]]
name = "1_operation_1"
path = "1_operation_1.rs"

[[bin]]
name = "1_operation_2"
path = "1_operation_2.rs"

[[bin]]
name = "lucky_numbers"
path = "lucky_numbers.rs"

[[bin]]
name = "2n"
path = "2n.rs"

[[bin]]
name = "batters"
path = "batters.rs"

[[bin]]
name = "filling_3x3_array"
path = "filling_3x3_array.rs"

[[bin]]
name = "union_of_interval"
path = "union_of_interval.rs"

[[bin]]
name = "takahashis_anguish"
path = "takahashis_anguish.rs"

[[bin]]
name = "reverse_and_minimize"
path = "reverse_and_minimize.rs"

[[bin]]
name = "unbalanced_squares"
path = "unbalanced_squares.rs"

[[bin]]
name = "a_to_z_string_2"
path = "a_to_z_string_2.rs"

[[bin]]
name = "1d_pawn"
path = "1d_pawn.rs"

[[bin]]
name = "robot_takahashi"
path = "robot_takahashi.rs"

[[bin]]
name = "jumping_takahashi_2"
path = "jumping_takahashi_2.rs"

[[bin]]
name = "growth_record"
path = "growth_record.rs"

[[bin]]
name = "counterclockwise_rotation"
path = "counterclockwise_rotation.rs"

[[bin]]
name = "xx_to_xxx"
path = "xx_to_xxx.rs"

[[bin]]
name = "circumferences"
path = "circumferences.rs"

[[bin]]
name = "lcm_on_whiteboard"
path = "lcm_on_whiteboard.rs"

[[bin]]
name = "intersection_2"
path = "intersection_2.rs"

[[bin]]
name = "tournament_result"
path = "tournament_result.rs"

[[bin]]
name = "newfolder_1"
path = "newfolder_1.rs"

[[bin]]
name = "flipping_and_bonus"
path = "flipping_and_bonus.rs"

[[bin]]
name = "many_operations"
path = "many_operations.rs"

[[bin]]
name = "ab_palindrome"
path = "ab_palindrome.rs"

[[bin]]
name = "full_house"
path = "full_house.rs"

[[bin]]
name = "ancestor"
path = "ancestor.rs"

[[bin]]
name = "monotonically_increasing"
path = "monotonically_increasing.rs"

[[bin]]
name = "left_right_operation"
path = "left_right_operation.rs"

[[bin]]
name = "atcodersubstr"
path = "atcodersubstr.rs"

[[bin]]
name = "nice_grid"
path = "nice_grid.rs"

[[bin]]
name = "matrix_reducing"
path = "matrix_reducing.rs"

[[bin]]
name = "redocta_swap_ii1"
path = "redocta_swap_ii1.rs"

[[bin]]
name = "blackout_2"
path = "blackout_2.rs"

[[bin]]
name = "saturday"
path = "saturday.rs"

[[bin]]
name = "split"
path = "split.rs"

[[bin]]
name = "index__a_continuous_ver"
path = "index__a_continuous_ver.rs"

[[bin]]
name = "index__a_not_continuous_ver"
path = "index__a_not_continuous_ver.rs"

[[bin]]
name = "erasing_vertices_2"
path = "erasing_vertices_2.rs"

[[bin]]
name = "max_mod_min"
path = "max_mod_min.rs"

[[bin]]
name = "124_test"
path = "124_test.rs"

[[bin]]
name = "hammer"
path = "hammer.rs"

[[bin]]
name = "simple_path"
path = "simple_path.rs"

[[bin]]
name = "stones_2"
path = "stones_2.rs"

[[bin]]
name = "three_cards"
path = "three_cards.rs"

[[bin]]
name = "plus_and_and"
path = "plus_and_and.rs"

[[bin]]
name = "integer_sum"
path = "integer_sum.rs"

[[bin]]
name = "everyone_is_friends"
path = "everyone_is_friends.rs"

[[bin]]
name = "max_even"
path = "max_even.rs"

[[bin]]
name = "root_m_leaper"
path = "root_m_leaper.rs"

[[bin]]
name = "add_and_mex"
path = "add_and_mex.rs"

[[bin]]
name = "a_recursive_function"
path = "a_recursive_function.rs"

[[bin]]
name = "broken_rounding"
path = "broken_rounding.rs"

[[bin]]
name = "k1th_largest_number"
path = "k1th_largest_number.rs"

[[bin]]
name = "lrud_instructions"
path = "lrud_instructions.rs"

[[bin]]
name = "notebook"
path = "notebook.rs"

[[bin]]
name = "batting_average"
path = "batting_average.rs"

[[bin]]
name = "line_sensor"
path = "line_sensor.rs"

[[bin]]
name = "ameba_2"
path = "ameba_2.rs"

[[bin]]
name = "robot_arms_2"
path = "robot_arms_2.rs"

[[bin]]
name = "booster"
path = "booster.rs"

[[bin]]
name = "find_takahashi"
path = "find_takahashi.rs"

[[bin]]
name = "abcdef"
path = "abcdef.rs"

[[bin]]
name = "counting_squares"
path = "counting_squares.rs"

[[bin]]
name = "yet_another_recursive_function"
path = "yet_another_recursive_function.rs"

[[bin]]
name = "sugoroku_4"
path = "sugoroku_4.rs"

[[bin]]
name = "rightmost"
path = "rightmost.rs"

[[bin]]
name = "adjacency_list"
path = "adjacency_list.rs"

[[bin]]
name = "previous_permutation"
path = "previous_permutation.rs"

[[bin]]
name = "divide_by_2_or_3"
path = "divide_by_2_or_3.rs"

[[bin]]
name = "round_trip"
path = "round_trip.rs"

[[bin]]
name = "double_chance"
path = "double_chance.rs"

